--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -33,6 +35,35 @@ dependencies {
 
     // Design
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    // Data Binding
+//    kapt 'com.android.databinding:compiler:3.1.4'
+
+    // Anko
+    implementation "org.jetbrains.anko:anko-commons:0.10.8"
+
+    // LifeCycle
+    def lifecycle_version = "2.1.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+
+    // Co-routines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
+    // Room
+    def room_version = "2.2.3"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // Stetho
+    implementation 'com.facebook.stetho:stetho:1.5.1'
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
