--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 
     // Design
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.1.0'
 
     // Data Binding
 //    kapt 'com.android.databinding:compiler:3.1.4'
@@ -48,8 +49,8 @@ dependencies {
     // LifeCycle
     def lifecycle_version = "2.1.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
     // Co-routines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
@@ -62,14 +63,14 @@ dependencies {
     // Room
     def room_version = "2.2.3"
     implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     // Stetho
     implementation 'com.facebook.stetho:stetho:1.5.1'
 
     // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.7.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
     // Testing
