--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,10 +47,9 @@ dependencies {
     implementation "org.jetbrains.anko:anko-commons:0.10.8"
 
     // LifeCycle
-    def lifecycle_version = "2.1.0"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.2.0'
 
     // Co-routines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
@@ -60,18 +59,21 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
-    // Room
-    def room_version = "2.2.3"
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    // Navigation
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0-alpha02'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0-alpha02'
 
-    // Stetho
-    implementation 'com.facebook.stetho:stetho:1.5.1'
+    // Room
+    implementation 'androidx.room:room-runtime:2.2.4'
+    implementation 'androidx.room:room-ktx:2.2.3'
+    kapt 'androidx.room:room-compiler:2.2.4'
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.7.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
+    // Stetho
+    implementation 'com.facebook.stetho:stetho:1.5.1'
 
     // Testing
     testImplementation 'junit:junit:4.12'
