--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.1.0'
 
+    // Preferences
+    implementation 'androidx.preference:preference:1.1.0'
+
     // Data Binding
 //    kapt 'com.android.databinding:compiler:3.1.4'
 
@@ -67,7 +70,7 @@ dependencies {
 
     // Room
     implementation 'androidx.room:room-runtime:2.2.4'
-    implementation 'androidx.room:room-ktx:2.2.3'
+    implementation 'androidx.room:room-ktx:2.2.4'
     kapt 'androidx.room:room-compiler:2.2.4'
 
     // Retrofit
