--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,9 @@ dependencies {
     // Stetho
     implementation 'com.facebook.stetho:stetho:1.5.1'
 
+    // Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
     // Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
