--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,13 @@ dependencies {
     // Preferences
     implementation 'androidx.preference:preference:1.1.1'
 
-    // Data Binding
-//    kapt 'com.android.databinding:compiler:3.1.4'
+    // Dagger
+    def dagger_version = "2.27"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
     // LifeCycle
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
